@@ -443,7 +443,7 @@ Arguments:
     value       The config value
 
 Options:
-    --scope     The config value's scope (default: "default")
+    --scope     The config value's scope (default: "default" | Can be "default", "websites", "stores")
     --scope-id  The config value's scope ID (default: "0")
     --encrypt   Encrypt the config value using local.xml's crypt key
 
@@ -463,6 +463,20 @@ Options:
 
 Help:
     If path is not set, all available config items will be listed. path may contain wildcards (*)
+
+Delete Config
+"""""""""""""
+
+.. code-block:: sh
+
+   $ n98-magerun.phar config:delete [--scope[="..."]] [--scope-id[="..."]] path
+
+Arguments:
+    path        The config path
+
+Options:
+    --scope     The config scope (default, websites, stores)
+    --scope-id  The config value's scope ID
 
 Config Search
 """""""""""""
