@@ -9,6 +9,7 @@ RECENT CHANGES
 * Fixing issue #185 - Allowing rewrite conflicts command to
 * Fixeed issue #185 - dev:module:rewrite:conflicts command doesn't detect inheritance past the parent class (by Kalen Jordan)
 * New db:create command (by Michael O'Connell)
+* New config:delete command (by Christian Münch)
 * Add ability to filter modules list. (by Peter O'Callaghan)
 * Fixed issue #188 - Cookie Domain is not recognized in any case (by Christian Münch)
 
